css/style.css
body{
    background: #90E0EF;
}

#header{
    background-color: #03045E;
    height: 60px;
    text-align: center;
}

.header_content{
    color: white;
    padding: 10px;
}

#banner_section{
    margin-top: 10px;
    max-height: 300px;
}

main {
    max-width: 900px;
    margin: auto;
    background: white;
    padding: 10px;
    height: 1100px;
}

.card {
    transition: 0.5s;
    box-shadow: 0 5px 9px 0 rgba(0,0,0,0.2);
    width: 33%;
}
  
.card:hover {
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}

.flex-container {
    display: flex;
    flex-wrap: nowrap;
  }
  
  .flex-container > div {
    background-color: #f1f1f1;
    margin: 30px 80px 30px 40px;
    text-align: center;
    font-size: 30px;
  }

#pizza, #chicken{
    margin: 0px 180px;
}

#add_restaurent{
    margin: 25px;
    border: 2px solid rgb(20, 20, 22);
}

form{
    margin: 30px 60px;
}

input, label, textarea{
    margin: 10px 10px;
    font-size: medium;
}

input, textarea{
    border: 2px solid;
}

label{
    font-size: 20px;
    font-style: bold;
}

.reg{
    text-align: center;
    color: #5152a0;
}

button{
    background-color: #5152a0;
    color: white;
    width: 10em;
    height: 2em;
}

button:hover {
    background-color: #1c1d6e;
}

.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  }
  
  /* Modal Content */
  .modal-content {
    background-color: #fefefe;
    margin: auto;
    padding: 30px;
    border: 1px solid #888;
    width: 30%;
    display: flex;
    text-align: center;
    line-height: 75px;;
  }

  .modal_image{
      border-radius: 100px;
      border-style: double;
      margin-right: 30px;
  }

footer{
    background-color: #5152a0;
    height: 50px;
    text-align: center;
    position:absolute;
    bottom:0;
    width:47%;
    color: white;
}

